--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,8 @@
 
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+.container {
+    width: 80%;
+    margin: 50px auto;
+}
