--- a/src/app/store/pages/home/home.component.scss
+++ b/src/app/store/pages/home/home.component.scss
@@ -1,22 +1,47 @@
-section {
-    &.list-products {
+.container {
+    padding: 16px;
+
+    .grid {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        gap: 20px 0;
 
         .card {
-            max-width: 300px;
-            margin: 10px 0;
+            width: 20%;
+            text-align: center;
 
             img {
-                height: 200px;
+                height: 150px;
+                width: auto;
                 max-width: 100%;
+                max-height: 100%;
             }
 
-            h5 {
-                color: #6b1113;
-                font-size: 32px;
-                margin-top: 20px
+            mat-card-actions {
+                text-align: right;
+                
+                button {
+                    margin-left: 10px;
+                    background-color: transparent;
+                    border: none;
+
+                    &:hover {
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+
+        @media (max-width: 998px) {
+            .card {
+                width: 45%;
+            }
+        }
+
+        @media (max-width: 790px) {
+            .card {
+                width: 100%;
             }
         }
     }
