--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,9 @@
     padding: 0;
 }
 
+body {
+    background-color: #eeeeee;
+}
+
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
