--- a/src/app/store/pages/home/home.component.scss
+++ b/src/app/store/pages/home/home.component.scss
@@ -20,6 +20,10 @@
 
                 &:hover {
                     cursor: pointer;
+                    transform: scale(1.05);
+                    transition: .4s;
+                    -webkit-transition: .4s;
+                    -moz-transition: .4s;
                 }
             }
 
@@ -29,9 +33,10 @@
                 text-overflow: ellipsis; 
                 overflow: hidden;
                 margin-top: 10px;
+
                 &:hover {
                     cursor: pointer;
-                    color: #673ab7;
+                    color: lighten(#673ab7, 10%);
                 }
             }
 
@@ -49,9 +54,13 @@
                     background-color: transparent;
                     border: none;
 
+                    &.active {
+                        color: #673ab7;
+                    }
+
                     &:hover {
                         cursor: pointer;
-                        color: #673ab7;
+                        color: lighten(#673ab7, 10%);
                     }
                 }
             }
