--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,4 +7,7 @@
   <button mat-icon-button class="example-icon" aria-label="My cart">
     <mat-icon>shopping_cart</mat-icon>
   </button>
+  <button mat-icon-button class="example-icon" aria-label="Profile" (click)="onClickNavigateProfile()">
+    <mat-icon>account_circle</mat-icon>
+  </button>
 </mat-toolbar>
